# blackmagic-iptv

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: ci.yml
crates/iptv-core/: Cargo.toml
crates/iptv-core/src/: error.rs  lib.rs  models.rs  validation.rs
crates/iptv-core/src/epg/: mod.rs
crates/iptv-core/src/parser/: m3u.rs  mod.rs  xmltv.rs
crates/iptv-core/tests/fixtures/: sample.m3u  sample.xmltv
crates/tauri-plugin-exoplayer/: Cargo.toml  build.rs
crates/tauri-plugin-exoplayer/android/: build.gradle.kts
crates/tauri-plugin-exoplayer/android/src/main/java/net/blackmagicsoftware/iptv/exoplayer/: ExoPlayerPlugin.kt
crates/tauri-plugin-exoplayer/permissions/: default.toml
crates/tauri-plugin-exoplayer/permissions/autogenerated/: reference.md
crates/tauri-plugin-exoplayer/permissions/autogenerated/commands/: getStats.toml  hidePlayer.toml  setMuted.toml  showPlayer.toml
crates/tauri-plugin-exoplayer/permissions/schemas/: schema.json
crates/tauri-plugin-exoplayer/src/: error.rs  lib.rs  mobile.rs  models.rs
docs/: privacy.html  sample-cert.m3u
scripts/: fetch-ffmpeg-windows.ps1  fetch-ffmpeg-windows.sh  fetch-ffmpeg.mjs  fetch-mpv-windows.ps1  fetch-mpv-windows.sh  fetch-mpv.mjs  generate-brand-assets.mjs  generate-mpv-lib.ps1  patch-android-icon-bg.mjs  setup-android.sh  setup-linux.sh
src/: app.css  app.html
src-tauri/: Cargo.toml  build.rs  tauri.android.conf.json  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  fetch.rs  lib.rs  main.rs  recording.rs  state.rs
src-tauri/src/db/: mod.rs  tests.rs
src-tauri/src/playback/: engine.rs  exoplayer.rs  mod.rs  mpv_event_pump.rs  window.rs
src-tauri/src/recording/: ffmpeg.rs
src-tauri/src/services/: mod.rs
src/lib/: api.ts  channelDisplay.ts  stream.ts  types.ts
src/lib/components/: BlackMageLogo.svelte  BrandLogo.svelte  ChannelBrowse.svelte  EpgPanel.svelte  GroupSidebar.svelte  GuidePreviewPip.svelte  NavBar.svelte  PlayerInfoBanner.svelte  PlayerMiniEpg.svelte  PlayerOverlay.svelte  Settings.svelte
src/routes/: +layout.svelte  +page.svelte
