[workspace]
members = ["crates/iptv-core", "src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
sha2 = "0.10"
hex = "0.4"
quick-xml = "0.37"
uuid = { version = "1", features = ["v4", "serde"] }
