[package]
name = "iptv-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core IPTV parsing, EPG matching, and validation"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
url.workspace = true
sha2.workspace = true
hex.workspace = true
quick-xml.workspace = true
uuid.workspace = true

[dev-dependencies]
pretty_assertions = "1"
