[package]
name = "tauri-plugin-exoplayer"
version = "0.1.0"
description = "ExoPlayer playback plugin for Black Magic IPTV (Android)"
edition = "2021"
links = "tauri-plugin-exoplayer"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "2", features = [] }
thiserror = { workspace = true }
tracing = "0.1"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
